# talk_to_my_bot

./: README.md  api.py  docker-compose.yaml  explorations.ipynb  pdfs_to_text.py  pyproject.toml
backend/: data_models.py  ingestion.py  pyproject.toml  rag.py
backend/src/: Dockerfile  api.py  constants.py  data_models.py  ingestion.py  pdfs_to_text.py  rag.py
data/: salih_cv_detaljerad.txt
frontend/: Dockerfile  app.py  pyproject.toml
