[project]
name = "talk-to-my-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "lancedb>=0.27.1",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
]
