[project]
name = "talk-to-my-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.128.0",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.6",
    "ipykernel>=7.1.0",
    "lancedb>=0.27.1",
    "pandas>=3.0.0",
    "pydantic-ai>=0.8.1",
    "pypdf>=6.6.2",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "streamlit>=1.19.0",
    "uvicorn>=0.40.0",
    "setuptools>=80.10.2",
]
