[project]
name = "talk-to-my-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = ["backend", "frontend"]

[tool.uv.sources]
backend = {workspace = true}
frontend = {workspace = true}

[tool.uv.workspace]
members = ["frontend", "backend"]
